Fix overflow issue on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -287,7 +287,12 @@ samp {
   border: 1px solid #ddd;
 }
 
+code {
+  white-space: nowrap;
+}
+
 pre {
+  white-space: break-spaces;
   padding: 5px 10px;
 }
 
